Fix AMP domain displayed in ReadingList

If an AMP page is added to the Reading List, the domain displayed should be
the one from the page after redirection, not google.com.

BUG=713405

Change-Id: Id50c181b374665924dbdf8ea58b249e4f53a9e75
Reviewed-on: https://chromium-review.googlesource.com/504847
Reviewed-by: Jean-François Geyelin <jif@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#471304}
Former-commit-id: 4b220cac0ff6f2c6af5a2099df2eb332ecf4eba6