ios/chrome/browser/ui/reading_list/reading_list_collection_view_controller.mm
@@ -615,16 +615,17 @@ using ItemsMapByDate = std::multimap<int64_t, ReadingListCollectionViewItem*>;
       distillationState:reading_list::UIStatusFromModelStatus(
                             entry.DistilledState())];
 
-  [self setItem:item
-      faviconURL:entry.DistilledURL().is_valid() ? entry.DistilledURL() : url];
+  const GURL& realURL =
+      entry.DistilledURL().is_valid() ? entry.DistilledURL() : url;
+  [self setItem:item faviconURL:realURL];
 
   BOOL has_distillation_details =
       entry.DistilledState() == ReadingListEntry::PROCESSED &&
       entry.DistillationSize() != 0 && entry.DistillationTime() != 0;
   NSString* fullUrlString =
-      base::SysUTF16ToNSString(url_formatter::FormatUrl(url));
+      base::SysUTF16ToNSString(url_formatter::FormatUrl(realURL));
   NSString* urlString =
-      base::SysUTF16ToNSString(url_formatter::FormatUrl(url.GetOrigin()));
+      base::SysUTF16ToNSString(url_formatter::FormatUrl(realURL.GetOrigin()));
   NSString* title = base::SysUTF8ToNSString(entry.Title());
   item.title = [title length] ? title : fullUrlString;
   item.subtitle = urlString;
